/**
 * Unit tests for SkeletonLoader Components
 */

import {
  ProductCardSkeleton,
  ProductListSkeleton,
  Skeleton,
} from '@/components/SkeletonLoader';
import { render } from '@testing-library/react-native';
import { View } from 'react-native';

// Mock react-native-reanimated
jest.mock('react-native-reanimated', () => {
  const Reanimated = require('react-native-reanimated/mock');
  Reanimated.default.call = () => {};
  return Reanimated;
});

describe('Skeleton', () => {
  describe('Rendering', () => {
    it('should render with default props', () => {
      const { toJSON } = render(<Skeleton />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render with custom width', () => {
      const { toJSON } = render(<Skeleton width={200} />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render with custom height', () => {
      const { toJSON } = render(<Skeleton height={50} />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render with custom borderRadius', () => {
      const { toJSON } = render(<Skeleton borderRadius={8} />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render with percentage width', () => {
      const { toJSON } = render(<Skeleton width="80%" />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render with custom style', () => {
      const customStyle = { marginBottom: 10 };
      const { toJSON } = render(<Skeleton style={customStyle} />);
      expect(toJSON()).toBeTruthy();
    });
  });

  describe('Props Combinations', () => {
    it('should handle all props together', () => {
      const { toJSON } = render(
        <Skeleton
          width={150}
          height={30}
          borderRadius={6}
          style={{ margin: 5 }}
        />
      );
      expect(toJSON()).toBeTruthy();
    });

    it('should handle string width with other numeric props', () => {
      const { toJSON } = render(
        <Skeleton width="90%" height={40} borderRadius={10} />
      );
      expect(toJSON()).toBeTruthy();
    });

    it('should handle minimal configuration', () => {
      const { toJSON } = render(<Skeleton width={100} height={20} />);
      expect(toJSON()).toBeTruthy();
    });
  });

  describe('Edge Cases', () => {
    it('should handle zero dimensions', () => {
      const { toJSON } = render(<Skeleton width={0} height={0} />);
      expect(toJSON()).toBeTruthy();
    });

    it('should handle very large dimensions', () => {
      const { toJSON } = render(<Skeleton width={1000} height={500} />);
      expect(toJSON()).toBeTruthy();
    });

    it('should handle zero borderRadius', () => {
      const { toJSON } = render(<Skeleton borderRadius={0} />);
      expect(toJSON()).toBeTruthy();
    });

    it('should handle undefined style', () => {
      const { toJSON } = render(<Skeleton style={undefined} />);
      expect(toJSON()).toBeTruthy();
    });
  });
});

describe('ProductCardSkeleton', () => {
  describe('Rendering', () => {
    it('should render correctly', () => {
      const { toJSON } = render(<ProductCardSkeleton />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render all skeleton components', () => {
      const { UNSAFE_getAllByType } = render(<ProductCardSkeleton />);
      const views = UNSAFE_getAllByType(View);
      expect(views.length).toBeGreaterThan(0);
    });

    it('should render image skeleton', () => {
      const { toJSON } = render(<ProductCardSkeleton />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render content skeletons', () => {
      const { toJSON } = render(<ProductCardSkeleton />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render footer skeletons', () => {
      const { toJSON } = render(<ProductCardSkeleton />);
      expect(toJSON()).toBeTruthy();
    });
  });

  describe('Structure', () => {
    it('should have correct container structure', () => {
      const { UNSAFE_getAllByType } = render(<ProductCardSkeleton />);
      const views = UNSAFE_getAllByType(View);
      expect(views.length).toBeGreaterThan(0);
    });

    it('should render multiple instances without conflict', () => {
      const { toJSON } = render(
        <View>
          <ProductCardSkeleton />
          <ProductCardSkeleton />
          <ProductCardSkeleton />
        </View>
      );
      expect(toJSON()).toBeTruthy();
    });
  });

  describe('Snapshot', () => {
    it('should match snapshot', () => {
      const { toJSON } = render(<ProductCardSkeleton />);
      expect(toJSON()).toMatchSnapshot();
    });
  });
});

describe('ProductListSkeleton', () => {
  describe('Rendering', () => {
    it('should render correctly', () => {
      const { toJSON } = render(<ProductListSkeleton />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render title skeleton', () => {
      const { toJSON } = render(<ProductListSkeleton />);
      expect(toJSON()).toBeTruthy();
    });

    it('should render multiple ProductCardSkeleton components', () => {
      const { UNSAFE_getAllByType } = render(<ProductListSkeleton />);
      const views = UNSAFE_getAllByType(View);
      // Should have multiple views for the card skeletons
      expect(views.length).toBeGreaterThan(3);
    });
  });

  describe('Structure', () => {
    it('should have list container', () => {
      const { UNSAFE_getAllByType } = render(<ProductListSkeleton />);
      const views = UNSAFE_getAllByType(View);
      expect(views.length).toBeGreaterThan(0);
    });

    it('should render exactly 3 ProductCardSkeletons', () => {
      const { toJSON } = render(<ProductListSkeleton />);
      expect(toJSON()).toBeTruthy();
    });
  });

  describe('Integration', () => {
    it('should render in a parent container', () => {
      const { getByTestId } = render(
        <View testID="parent-container">
          <ProductListSkeleton />
        </View>
      );
      expect(getByTestId('parent-container')).toBeTruthy();
    });

    it('should work with multiple instances', () => {
      const { toJSON } = render(
        <View>
          <ProductListSkeleton />
          <ProductListSkeleton />
        </View>
      );
      expect(toJSON()).toBeTruthy();
    });
  });

  describe('Snapshot', () => {
    it('should match snapshot', () => {
      const { toJSON } = render(<ProductListSkeleton />);
      expect(toJSON()).toMatchSnapshot();
    });
  });
});

describe('Skeleton Components Integration', () => {
  describe('Combined Usage', () => {
    it('should render Skeleton and ProductCardSkeleton together', () => {
      const { toJSON } = render(
        <View>
          <Skeleton width={200} height={20} />
          <ProductCardSkeleton />
        </View>
      );
      expect(toJSON()).toBeTruthy();
    });

    it('should render all skeleton types together', () => {
      const { toJSON } = render(
        <View>
          <Skeleton width="100%" height={30} />
          <ProductCardSkeleton />
          <ProductListSkeleton />
        </View>
      );
      expect(toJSON()).toBeTruthy();
    });

    it('should handle nested structures', () => {
      const { getByTestId } = render(
        <View testID="outer-container">
          <View testID="inner-container">
            <Skeleton width={100} height={20} />
            <ProductCardSkeleton />
          </View>
        </View>
      );
      expect(getByTestId('outer-container')).toBeTruthy();
      expect(getByTestId('inner-container')).toBeTruthy();
    });
  });

  describe('Performance', () => {
    it('should handle multiple renders without issues', () => {
      const { rerender } = render(<Skeleton width={100} height={20} />);
      rerender(<Skeleton width={200} height={40} />);
      rerender(<Skeleton width={150} height={30} />);
    });

    it('should handle rapid re-renders of ProductCardSkeleton', () => {
      const { rerender } = render(<ProductCardSkeleton />);
      for (let i = 0; i < 5; i++) {
        rerender(<ProductCardSkeleton />);
      }
    });

    it('should handle rapid re-renders of ProductListSkeleton', () => {
      const { rerender } = render(<ProductListSkeleton />);
      for (let i = 0; i < 5; i++) {
        rerender(<ProductListSkeleton />);
      }
    });
  });
});
